07-session-ingress/devops-argo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress1
  namespace: discovery
spec:
  ingressClassName: "nginx"
  rules:
  - host: myingress.lcf.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
